# ClimateNet-Bench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  crud.py  data_loader.py  database.py  main.py  schemas.py
backend/routers/: attribution.py  benchmark.py  comparison.py  experiments.py  leaderboard.py  physical.py  predictions.py  spatial.py  summary.py  uncertainty.py
configs/: data_config.yaml  experiment_config.yaml  model_config.yaml
dashboard/: app.py
docs/: api.md  benchmark_protocol.md  development_history.md  limitations.md  physical_consistency.md  reproduce.md  task_definition.md  uncertainty.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
notebooks/: 01_exploration.ipynb
outputs/: all_experiments.csv
scripts/: build_forecasting_dataset.py  build_leaderboard.py  download_era5.py  generate_splits.py  preprocess_era5.py  run_benchmark.py  run_experiment.py  run_pipeline.py  run_tcn_experiment.py
sql/: schema.sql
src/: config.py  download_era5.py  evaluate.py  explain.py  features.py  load_to_db.py  make_sample_data.py  physical_features.py  plot_results.py  preprocess_era5.py  train.py  validation.py
tests/: test_baselines.py  test_conformal.py  test_feature_pipeline.py  test_forecasting_dataset.py  test_leaderboard.py  test_metrics.py  test_physical_consistency.py  test_region_registry.py  test_sequence_dataset.py  test_split_protocols.py  test_validation.py
(+103 files in other folders)
